Fixing layout issue with bullets in accessibility checklist

--- a/css/base.css
+++ b/css/base.css
@@ -203,6 +203,10 @@ blockquote.citation {
 /* Lists
 /* --------------------------------------------------------------------- */ 
 
+li > p {
+	margin: 0;
+}
+
 ul {
 	list-style: disc;
 	margin: 0 0 15px 15px;
